# ludwig

./: .gitignore  README.md  pyproject.toml  setup.py
.github/: release.yml
.github/ISSUE_TEMPLATE/: Because-Done.yml  Bug-Report.yml
docs/planning/: FRONTEND_SPEC.md  NEXT_STEPS.md  PROJECT_ROADMAP.md
ludwig/: __init__.py  boards.py  main.py  midi.py  specs.py  types.py
ludwig/boards/: __init__.py  command8.py  generic.py  gld.py  qu24.py  xair.py
sandfly/: boards.py  main.py  specs.py
src/ludwig/: hookspecs.py  midi.py  mixer.py  models.py
src/ludwig/boards/: __init__.py  command8.py  qu24.py  xair.py
src/ludwig/plugins/: __init__.py  base.py
src/ludwig/server/: __init__.py  api.py  state.py  websocket.py
