[project]
name = "ludwig"
version = "0.2.0"
description = "Remote audio mixing workstation - control sound boards via MIDI/OSC with a unified web interface"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pluggy>=1.6.0",
    "pydantic>=2.12.5",
    "python-rtmidi>=1.5.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "websockets>=13.0",
    "python-osc>=1.9.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.24.0", "httpx>=0.27.0", "ruff>=0.8.0"]

[project.scripts]
ludwig = "ludwig.server.api:main"
ludwig-cli = "ludwig.main:main"

[build-system]
requires = ["uv_build>=0.9.18,<0.10.0"]
build-backend = "uv_build"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
